--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -5,4 +5,35 @@
   text-transform: uppercase;
   color: #ffffff;
   background-color: #283645;
+  width: 320px;
+  margin: 0 auto;
+}
+
+.main-nav__list {
+  min-height: 70px;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav {
+    width: 660px;
+    margin: 0 auto;
+  }
+
+  .main-nav__list {
+    min-height: 110px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav {
+    width: 1200px;
+    margin: 0 auto;
+  }
+  
+  .main-nav__wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 940px;
+    margin: 0 auto;
+  }
 }
