--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,3 +1,8 @@
+.page-form {
+  width: 320px;
+  margin: 0 auto;
+}
+
 .page-form__background {
   height: 170px;
   background: url("../img/bg-back-mobile@1x.jpg");
@@ -10,4 +15,16 @@
   color: #ffffff;
   text-align: center;
   margin-top: 62px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-form {
+    width: 660px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-form {
+    width: 1200px;
+  }
 }
