--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,4 +1,5 @@
 body {
+  min-width: 320px;
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
@@ -9,14 +10,8 @@ body {
   background: fff;
 }
 
-.site-wrapper {
-  min-width: 320px;
-}
-
-.container {
-  width: 320px;
-  margin: 0 auto;
-  padding: 0 20px;
+img {
+  height: auto;
 }
 
 .visually-hidden:not(:focus):not(:active),
