--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,12 +1,14 @@
 @import "scaffolding.less";
+@import "variables.less";
 @import "blocks/advantages.less";
 @import "blocks/app-save.less";
 @import "blocks/copyright.less";
 @import "blocks/main-nav.less";
+@import "blocks/page-footer.less";
 @import "blocks/page-form.less";
 @import "blocks/page-main.less";
 @import "blocks/page-photo.less";
 @import "blocks/photo-post.less";
-@import "blocks/reviews.less";
-@import "site-list.less";
-@import "social.less";
+@import "blocks/research.less";
+@import "blocks/site-list.less";
+@import "blocks/social.less";
