--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,2 +1,5 @@
 @tablet-width: 660px;
 @desktop-width: 1200px;
+@mobile-tablet-width-only: 1199px;
+@hover-link: rgba(210, 40, 86, 1);
+@active-link: rgba(210, 40, 86, 0.7);
