--- a/source/less/blocks/app-save.less
+++ b/source/less/blocks/app-save.less
@@ -1,7 +1,23 @@
 .app-save {
-  background-color: #1d2631;
-  padding-top: 28px;
-  margin-top: -7px;
+  width: 100%;
+  height: 396px;
+  background-color: #2d3d4e;
+  background-image: url("../../img/iphone-hand-mobile@1x.png"), url("../../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat, no-repeat;
+  background-position: 20px bottom, center center;
+  background-size: auto, 100%;
+}
+
+.app-save__wrapper {
+  padding-left: 20px;
+  padding-right: 20px;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.app-save__block {
+  padding-top: 30px;
 }
 
 .app-save__button {
@@ -20,6 +36,15 @@
   border: 3px solid #ffffff;
   cursor: pointer;
   background-color: #1d2631;
+  margin-bottom: 30px;
+}
+
+.app-save__os-list {
+  list-style: none;
+  margin: 30px 20px;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .app-save__description {
@@ -28,16 +53,7 @@
   width: 250px;
   margin: 0 auto;
   text-align: center;
-  padding-top: 29px;
-  padding-bottom: 34px;
-}
-
-.app-save__os-list {
-  list-style: none;
-  margin: 20px;
-  padding: 0;
-  display: flex;
-  justify-content: space-between;
+  margin-bottom: 36px;
 }
 
 .app-save__slogan {
@@ -46,14 +62,73 @@
 
 @media (min-width: @tablet-width) {
   .app-save {
+    width: 100%;
+    height: 620px;
+    background-color: #2d3d4e;
+    background-image: url("../../img/iphone-hand-tablet@1x.png"), url("../../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat, no-repeat;
+    background-position: right bottom, center;
+    background-size: 700px 545px, 100% 730px;
+  }
+
+  .app-save__wrapper {
+    width: 620px;
+    max-width: 100%;
+  }
+
+  .app-save__block {
     width: 300px;
-    margin-top: -620px;
-    margin-bottom: 0;
-    z-index: 1;
+    padding-top: 100px;
   }
 
   .app-save__slogan {
     display: block;
     color: #ffffff;
+    font-size: 40px;
+    line-height: 48px;
+    font-weight: 300;
+    width: 200px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .app-save__button {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .app-save {
+    width: 100%;
+    height: 850px;
+    background-color: #2d3d4e;
+    background-image: url("../../img/iphone-hand-desktop@1x.png"), url("../../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat, no-repeat;
+    background-position: right bottom, center;
+    background-size: 1050px 645px, 100% 850px;
+  }
+
+  .app-save__wrapper {
+    width: 940px;
+  }
+
+  .app-save__slogan {
+    font-size: 50px;
+    line-height: 60px;
+    width: 300px;
+  }
+
+  .app-save__button {
+    font-size: 21px;
+    padding: 20px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+
+  .app-save__description {
+    font-size: 18px;
+    width: 300px;
+    margin-top: 60px;
   }
 }
