--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,3 +1,24 @@
-.copyright__text {
-  line-height: 18px;
+@media (min-width: @tablet-width) {
+  .copyright {
+    width: 150px;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .copyright__text {
+    line-height: 18px;
+    font-weight: 400;
+    margin-top: 6px;
+    margin-right: 16px;
+  }
+
+  .copyright__link {
+    fill: #d22856;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .copyright__text {
+    font-size: 18px;
+  }
 }
