--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -12,20 +12,39 @@
 }
 
 @media (min-width: @tablet-width) {
-  .page-footer-index,
-  .page-footer {
+  .page-footer-index {
+    width: 100%;
+    background-color: #ffffff;
+    display: block;
+    padding-top: 20px;
+  }
+
+  .page-footer-index__wrapper {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 36px;
+    width: 620px;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    width: 620px;
-    margin: 0 auto;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .page-footer-index,
-  .page-footer {
+  .page-footer-index {
+    width: 100%;
+    background-color: #ffffff;
+    display: block;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  .page-footer-index__wrapper {
     width: 940px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
