--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,30 +1,67 @@
-.page-form {
-  width: 320px;
-  margin: 0 auto;
-}
-
 .page-form__background {
+  width: 100%;
   height: 170px;
   background: url("../img/bg-back-mobile@1x.jpg");
-  padding: 36px 20px 50px;
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+
+.page-form__wrapper {
+  width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .page-form__competition {
+  width: 250px;
   font-size: 24px;
   font-weight: 300;
   color: #ffffff;
   text-align: center;
-  margin-top: 62px;
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 36px;
 }
 
 @media (min-width: @tablet-width) {
-  .page-form {
-    width: 660px;
+  .page-form__background {
+    height: 330px;
+    background: url("../../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: top center;
+  }
+
+  .page-form__wrapper {
+    width: 620px;
+  }
+
+  .page-form__competition {
+    width: 500px;
+    font-size: 50px;
+    line-height: 60px;
+    padding-top: 80px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .page-form {
-    width: 1200px;
+  .page-form__background {
+    height: 285px;
+    background: url("../../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: top center;
+  }
+
+  .page-form__wrapper {
+    width: 940px;
+  }
+
+  .page-form__competition {
+    width: 765px;
+    font-size: 50px;
+    line-height: 60px;
+    padding-top: 75px;
   }
 }
