--- a/source/less/blocks/page-photo.less
+++ b/source/less/blocks/page-photo.less
@@ -1,12 +1,22 @@
 .page-photo {
-  width: 320px;
-  margin: 0 auto;
+  background-color: #ffffff;
 }
 
 .page-photo__background {
+  width: 100%;
   height: 170px;
-  background: url("../img/bg-back-mobile@1x.jpg");
-  padding: 36px 20px 50px;
+  background: url("../../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-color: #2d3d4e;
+}
+
+.page-photo__wrapper {
+  width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .page-photo__photo-users {
@@ -14,35 +24,67 @@
   font-weight: 300;
   color: #ffffff;
   text-align: center;
-  margin-top: 62px;
+  padding-top: 62px;
+  margin: 0;
 }
 
 .page-photo__description {
+  font-size: 14px;
   line-height: 30px;
   text-align: center;
-  margin: 20px;
+  margin: 0;
+  margin-top: 50px;
+  margin-bottom: 56px;
 }
 
 @media (min-width: @tablet-width) {
-  .page-photo {
-    width: 660px;
+  .page-photo__background {
+    height: 285px;
+    background: url("../../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: top center;
+  }
+
+  .page-photo__wrapper {
+    width: 620px;
   }
 
   .page-photo__description {
-    width: 470px;
-    margin: 0 auto;
     font-size: 18px;
     line-height: 30px;
     text-align: center;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 100px;
+    margin-bottom: 84px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .page-photo {
-    width: 1200px;
+  .page-photo__background {
+    background: url("../../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: top center;
+  }
+
+  .page-photo__wrapper {
+    width: 940px;
+  }
+
+  .page-photo__photo-users {
+    font-size: 50px;
+    line-height: 60px;
+    font-weight: 300;
+    padding-top: 75px;
+    width: 380px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .page-photo__description {
     width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 92px;
   }
 }
