--- a/source/less/blocks/photo-post.less
+++ b/source/less/blocks/photo-post.less
@@ -1,3 +1,16 @@
+.photo-post {
+  width: 100%;
+  background-color: #ffffff;
+}
+
+.photo-post__wrapper {
+  width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .photo-post__list {
   list-style: none;
   margin: 0;
@@ -10,10 +23,11 @@
 }
 
 .photo-post__info {
-  padding: 26px 16px;
+  padding: 25px 16px;
 }
 
 .photo-post__user {
+  margin: 0;
   font-weight: 700;
 }
 
@@ -24,9 +38,24 @@
 }
 
 .photo-post__like {
+  margin: 0;
+  margin-top: 20px;
+  padding-left: 32px;
   font-size: 12px;
   text-transform: uppercase;
   color: #d22856;
+  position: relative;
+
+  &::after {
+    content: "";
+    width: 13px;
+    height: 13px;
+    position: absolute;
+    left: 0;
+    top: 6px;
+    background: url("../../img/icon-heart.svg");
+    background-repeat: no-repeat;
+  }
 }
 
 .photo-post__item:nth-child(1) img {
@@ -35,6 +64,10 @@
 }
 
 @media (min-width: @tablet-width) {
+  .photo-post__wrapper {
+    width: 620px;
+  }
+
   .photo-post__list {
     width: 620px;
     margin: 0 auto;
@@ -42,6 +75,21 @@
     justify-content: space-between;
     flex-direction: row;
     flex-wrap: wrap;
+  }
+
+  .photo-post__info {
+    position: relative;
+    padding: 30px;
+  }
+
+  .photo-post__item:nth-child(1) .photo-post__like {
+    position: absolute;
+    top: 13px;
+    right: 50px;
+
+    &::after {
+      right: -25px;
+    }
   }
 
   .photo-post__item:nth-child(1) {
@@ -63,9 +111,26 @@
     width: 300px;
     height: 300px;
   }
+
+  .photo-post__description {
+    margin-top: 3px;
+  }
+
+  .photo-post__like {
+    padding-left: 0;
+
+    &::after {
+      right: 0;
+      left: auto;
+    }
+  }
 }
 
 @media (min-width: @desktop-width) {
+  .photo-post__wrapper {
+    width: 940px;
+  }
+
   .photo-post__list {
     width: 940px;
   }
@@ -82,7 +147,8 @@
 
   .photo-post__item {
     width: 300px;
-    margin: 50px 0;
+    margin: 0;
+    margin-bottom: 50px;
   }
 
   .photo-post__img {
