--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,8 +1,24 @@
-.social__list {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  min-width: 200px;
-  margin: 0;
-  padding: 0;
+@media (min-width: @tablet-width) {
+  .social__list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 320px;
+  }
+
+  .social__item {
+    margin: 0 7px;
+  }
+
+  .social__link {
+    fill: #d22856;
+    width: 46px;
+    height: 46px;
+    padding: 19px;
+    border-radius: 50%;
+    border: 3px solid rgba(40, 54, 69, 0.1);
+  }
 }
