Верстка макетов. Задание 5

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,14 +1,13 @@
 .advantages__slogan {
   background-color: #ffffff;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 15px;
   width: 100%;
 }
 
 .advantages__wrapper-slogan {
   padding-left: 20px;
   padding-right: 20px;
-  width: 320px;
+  width: 280px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -19,18 +18,22 @@
   line-height: 30px;
   font-weight: 300;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 .advantages__main-mobile {
-  background-color: #f2f2f2;
   width: 100%;
-  padding-top: 20px;
+  padding-top: 47px;
+  background: url("../../img/bg-triangle-white.svg");
+  background-repeat: no-repeat;
+  background-position: center -36px;
+  background-color: #f2f2f2;
 }
 
 .advantages__wrapper-main-mobile {
   padding-left: 20px;
   padding-right: 20px;
-  width: 320px;
+  width: 280px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -41,19 +44,36 @@
   padding: 0;
 }
 
+.advantages__item-mobile {
+  margin-top: 38px;
+}
+
 .advantages__title-mobile {
   font-size: 18px;
   line-height: 10px;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .advantages__description-mobile {
   text-align: center;
+  margin-top: 19px;
+  margin-bottom: 0;
+  padding: 0;
+}
+
+.advantages__img-align {
+  height: 319px;
+  overflow: hidden;
 }
 
 .advantages__img-mobile {
   display: block;
-  margin: 0 auto;
+  margin-top: 40px;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .advantages__main-desktop {
@@ -72,8 +92,8 @@
   }
 
   .advantages__slogan {
-    padding-top: 56px;
-    padding-bottom: 56px;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 
   .advantages__first-slogan,
@@ -90,8 +110,15 @@
     margin: 0 auto;
   }
 
+  .advantages__main-mobile {
+    background-position: center -24px;
+  }
+
   .advantages__img-align {
     width: 310px;
+    height: 481px;
+    margin-top: -46px;
+    overflow: hidden;
   }
 
   .advantages__img-mobile {
@@ -102,7 +129,11 @@
 
   .advantages__list-mobile {
     width: 310px;
-    padding-top: 76px;
+  }
+
+  .advantages__item-mobile {
+    margin-top: 31px;
+    margin-bottom: 42px;
   }
 
   .advantages__title-mobile {
@@ -122,6 +153,10 @@
   .advantages__main-desktop {
     display: block;
     width: 100%;
+    padding-top: 0;
+    background: url("../../img/bg-triangle-white.svg");
+    background-repeat: no-repeat;
+    background-position: left 0;
     background-color: #f2f2f2;
   }
 
@@ -133,6 +168,11 @@
 
   .advantages__wrapper-slogan {
     width: 940px;
+  }
+
+  .advantages__slogan {
+    padding-top: 66px;
+    padding-bottom: 77px;
   }
 
   .advantages__first-slogan,
@@ -155,7 +195,7 @@
   }
 
   .advantages__item-desktop {
-    width: 240px;
+    width: 295px;
     text-align: center;
   }
 
@@ -163,10 +203,22 @@
     font-size: 30px;
     line-height: 30px;
     font-weight: 700;
+    margin-right: 0;
+    margin-top: 48px;
+    margin-bottom: 24px;
+    margin-left: 2px;
+  }
+
+  .advantages__item-desktop:nth-child(3) .advantages__title-desktop {
+    width: 232px;
+    margin-left: 28px;
+    margin-right: -76px;
   }
 
   .advantages__description-desktop {
+    width: 248px;
     font-size: 18px;
     line-height: 30px;
+    margin-left: 23px;
   }
 }
