--- a/source/less/blocks/app-save.less
+++ b/source/less/blocks/app-save.less
@@ -1,28 +1,30 @@
 .app-save {
   width: 100%;
-  height: 396px;
+  height: 670px;
   background-color: #2d3d4e;
   background-image: url("../../img/iphone-hand-mobile@1x.png"), url("../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat, no-repeat;
-  background-position: 20px bottom, center center;
-  background-size: auto, 100%;
+  background-position: left 112px, center -65px;
 }
 
 .app-save__wrapper {
   padding-left: 20px;
   padding-right: 20px;
-  max-width: 320px;
+  max-width: 280px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .app-save__block {
-  padding-top: 30px;
+  padding-top: 427px;
 }
 
 .app-save__button {
   display: flex;
-  padding: 20px 40px;
+  padding-top: 14px;
+  padding-bottom: 16px;
+  padding-left: 35px;
+  padding-right: 35px;
   margin-left: auto;
   margin-right: auto;
   font-weight: 700;
@@ -41,7 +43,9 @@
 
 .app-save__os-list {
   list-style: none;
-  margin: 30px 20px;
+  margin-left: 32px;
+  margin-right: 32px;
+  margin-bottom: 17px;
   padding: 0;
   display: flex;
   justify-content: space-between;
@@ -67,8 +71,7 @@
     background-color: #2d3d4e;
     background-image: url("../../img/iphone-hand-tablet@1x.png"), url("../../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat, no-repeat;
-    background-position: right bottom, center;
-    background-size: 700px 545px, 100% 730px;
+    background-position: -20px 75px, center -108px;
   }
 
   .app-save__wrapper {
@@ -78,7 +81,7 @@
 
   .app-save__block {
     width: 300px;
-    padding-top: 100px;
+    padding-top: 94px;
   }
 
   .app-save__slogan {
@@ -93,24 +96,39 @@
   }
 
   .app-save__button {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 32px;
+    margin-bottom: 47px;
+    padding-left: 45px;
+    padding-right: 45px;
+  }
+
+  .app-save__os-list {
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 29px;
+  }
+
+  .app-save__description {
+    font-size: 18px;
+    width: 300px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .app-save {
     width: 100%;
-    height: 850px;
-    background-color: #2d3d4e;
-    background-image: url("../../img/iphone-hand-desktop@1x.png"), url("../../img/bg-back-desktop@1x.jpg");
-    background-repeat: no-repeat, no-repeat;
-    background-position: right bottom, center;
-    background-size: 1050px 645px, 100% 850px;
+    background: none;
+    background-image: none;
+    margin-top: -882px;
+    margin-bottom: 15px;
   }
 
   .app-save__wrapper {
     width: 940px;
+  }
+
+  .app-save__block {
+    padding-top: 0;
   }
 
   .app-save__slogan {
@@ -121,14 +139,17 @@
 
   .app-save__button {
     font-size: 21px;
-    padding: 20px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    padding-top: 14px;
+    padding-bottom: 17px;
+    padding-left: 28px;
+    padding-right: 28px;
+    margin-top: 52px;
+    margin-bottom: 67px;
   }
 
   .app-save__description {
     font-size: 18px;
     width: 300px;
-    margin-top: 60px;
+    margin-top: 48px;
   }
 }
