--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -7,6 +7,7 @@
     margin: 0;
     padding: 0;
     width: 320px;
+    margin-top: 6px;
   }
 
   .social__item {
@@ -17,7 +18,7 @@
     fill: #d22856;
     width: 46px;
     height: 46px;
-    padding: 19px;
+    padding: 13px;
     border-radius: 50%;
     border: 3px solid rgba(40, 54, 69, 0.1);
   }
