--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -11,7 +11,6 @@
 .main-nav__wrapper {
   padding-left: 20px;
   padding-right: 20px;
-  width: 320px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -55,9 +54,9 @@
   &::after {
     content: "";
     position: absolute;
-    top: 24px;
-    left: 38px;
-    width: 36px;
+    top: 21px;
+    left: 43px;
+    width: 31px;
     height: 2px;
     background-color: #ffffff;
   }
@@ -83,13 +82,11 @@
 }
 
 .main-nav__logo {
-  width: auto;
   display: flex;
   position: relative;
   height: 70px;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
   background-color: #283645;
   border-bottom: 1px solid #000000;
 }
@@ -129,10 +126,6 @@
     width: 100%;
   }
 
-  .main-nav__wrapper {
-    width: 620px;
-  }
-
   .main-nav__logo {
     height: 110px;
   }
@@ -153,6 +146,34 @@
 @media (min-width: @desktop-width) {
   .main-nav {
     width: 100%;
+    background-color: rgba(40, 54, 69, 0.7);
+  }
+
+  .main-nav__logo {
+    background: none;
+  }
+
+  .main-nav__wrapper-desktop {
+    width: 100%;
+    height: 1100px;
+    background-color: #283645;
+    background-image: url("../../img/iphone-hand-desktop@1x.png"), url("../../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat, no-repeat;
+    background-position: 146px 208px, center 0px;
+  }
+  
+  .main-nav__wrapper-desktop-photo {
+    height: 395px;
+    background: url("../../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: center 0px;
+  }
+
+  .main-nav__wrapper-desktop-form {
+    height: 394px;
+    background: url("../../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: center 0px;
   }
 
   .main-nav__wrapper {
