--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -31,6 +31,10 @@
     align-items: center;
     flex-direction: row;
   }
+
+  .page-footer__copyright {
+    margin-top: 14px;
+  }
 }
 
 @media (min-width: @desktop-width) {
