--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,13 +1,13 @@
 .page-form__background {
   width: 100%;
-  height: 170px;
+  height: 173px;
   background: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: center -64px;
 }
 
 .page-form__wrapper {
-  width: 320px;
+  width: 280px;
   padding-left: 20px;
   padding-right: 20px;
   margin-left: auto;
@@ -17,21 +17,22 @@
 .page-form__competition {
   width: 250px;
   font-size: 24px;
+  line-height: 28px;
   font-weight: 300;
   color: #ffffff;
   text-align: center;
   margin: 0;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 36px;
+  padding-top: 34px;
 }
 
 @media (min-width: @tablet-width) {
   .page-form__background {
-    height: 330px;
+    height: 332px;
     background: url("../../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
-    background-position: top center;
+    background-position: center -108px;
   }
 
   .page-form__wrapper {
@@ -42,16 +43,17 @@
     width: 500px;
     font-size: 50px;
     line-height: 60px;
-    padding-top: 80px;
+    padding-top: 72px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .page-form {
+    margin-top: -283px;
+  }
   .page-form__background {
-    height: 285px;
-    background: url("../../img/bg-back-desktop@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: top center;
+    background: none;
+    height: 283px;
   }
 
   .page-form__wrapper {
@@ -62,6 +64,6 @@
     width: 765px;
     font-size: 50px;
     line-height: 60px;
-    padding-top: 75px;
+    padding-top: 62px;
   }
 }
