--- a/source/less/blocks/page-photo.less
+++ b/source/less/blocks/page-photo.less
@@ -4,15 +4,15 @@
 
 .page-photo__background {
   width: 100%;
-  height: 170px;
+  height: 173px;
   background: url("../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: center -64px;
   background-color: #2d3d4e;
 }
 
 .page-photo__wrapper {
-  width: 320px;
+  width: 280px;
   padding-left: 20px;
   padding-right: 20px;
   margin-left: auto;
@@ -21,10 +21,11 @@
 
 .page-photo__photo-users {
   font-size: 24px;
+  line-height: 28px;
   font-weight: 300;
   color: #ffffff;
   text-align: center;
-  padding-top: 62px;
+  padding-top: 34px;
   margin: 0;
 }
 
@@ -32,39 +33,52 @@
   font-size: 14px;
   line-height: 30px;
   text-align: center;
-  margin: 0;
-  margin-top: 50px;
-  margin-bottom: 56px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 45px;
+  margin-bottom: 49px;
+  width: 250px;
 }
 
 @media (min-width: @tablet-width) {
   .page-photo__background {
-    height: 285px;
+    height: 332px;
     background: url("../../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
-    background-position: top center;
+    background-position: center -108px;
   }
 
   .page-photo__wrapper {
     width: 620px;
   }
 
+  .page-photo__photo-users {
+    font-size: 50px;
+    line-height: 60px;
+    padding-top: 72px;
+  }
+
   .page-photo__description {
     font-size: 18px;
     line-height: 30px;
     text-align: center;
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-top: 100px;
-    margin-bottom: 84px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 92px;
+    margin-bottom: 76px;
+    width: 560px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .page-photo {
+    background-color: transparent;
+    margin-top: -283px;
+  }
+
   .page-photo__background {
-    background: url("../../img/bg-back-desktop@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: top center;
+    background: none;
+    height: 282px;
   }
 
   .page-photo__wrapper {
@@ -75,7 +89,7 @@
     font-size: 50px;
     line-height: 60px;
     font-weight: 300;
-    padding-top: 75px;
+    padding-top: 62px;
     width: 380px;
     margin-left: auto;
     margin-right: auto;
@@ -85,6 +99,6 @@
     width: 600px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 92px;
+    margin-bottom: 88px;
   }
 }
