--- a/source/less/blocks/research.less
+++ b/source/less/blocks/research.less
@@ -12,8 +12,7 @@
   .research__wrapper {
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 58px;
     width: 620px;
     margin-left: auto;
     margin-right: auto;
@@ -25,6 +24,7 @@
     display: flex;
     flex-direction: column;
     width: 310px;
+    margin-top: 7px;
   }
 
   .research__title {
@@ -32,6 +32,13 @@
     line-height: 36px;
     font-weight: 700;
     color: #000000;
+    width: 170px;
+  }
+
+  .research__description {
+    margin-top: -20px;
+    margin-bottom: -4px;
+    margin-right: 2px;
   }
 
   .research__more-link {
@@ -43,6 +50,7 @@
 @media (min-width: @desktop-width) {
   .research {
     width: 100%;
+    height: 460px;
     background-color: #f2f2f2;
   }
 
@@ -50,19 +58,30 @@
     width: 940px;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 48px;
+  }
+
+  .research__img-timer {
+    width: 300px;
+    height: 343px;
   }
 
   .research__text {
-    width: 530px;
+    width: 574px;
   }
 
   .research__title {
     line-height: 30px;
+    margin-top: 87px;
+    margin-bottom: 45px;
+    width: 400px;
   }
 
   .research__description {
+    width: 530px;
     font-size: 18px;
     line-height: 30px;
+    margin-bottom: 16px;
   }
 
   .research__more-link {
