--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -7,7 +7,7 @@
 
 .site-list__link {
   display: block;
-  padding: 12px 21px;
+  padding: 16px 21px;
   padding-bottom: 13px;
   font-size: 18px;
   line-height: 32px;
@@ -40,6 +40,7 @@
     justify-content: space-between;
     width: 620px;
     min-height: 110px;
+    background: none;
   }
 
   .site-list__item {
@@ -66,5 +67,11 @@
 
   .site-list__link {
     border: none;
+    text-transform: none;
+    font-weight: 400;
+    line-height: 18px;
+    padding: 0;
   }
 }
+
+
