--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -159,21 +159,21 @@
     background-color: #283645;
     background-image: url("../../img/iphone-hand-desktop@1x.png"), url("../../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat, no-repeat;
-    background-position: 146px 208px, center 0px;
+    background-position: 146px 208px, center 0;
   }
 
   .main-nav__wrapper-desktop-photo {
     height: 395px;
     background: url("../../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
-    background-position: center 0px;
+    background-position: center 0;
   }
 
   .main-nav__wrapper-desktop-form {
     height: 394px;
     background: url("../../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
-    background-position: center 0px;
+    background-position: center 0;
   }
 
   .main-nav__wrapper {
