--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -4,6 +4,11 @@
   background: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center -64px;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../../img/bg-back-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
 }
 
 .page-form__wrapper {
@@ -33,6 +38,11 @@
     background: url("../../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-position: center -108px;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../../img/bg-back-tablet@2x.jpg");
+      background-size: 1200px auto;
+    }
   }
 
   .page-form__wrapper {
