--- a/source/less/blocks/page-photo.less
+++ b/source/less/blocks/page-photo.less
@@ -9,6 +9,11 @@
   background-repeat: no-repeat;
   background-position: center -64px;
   background-color: #2d3d4e;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../../img/bg-back-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
 }
 
 .page-photo__wrapper {
@@ -46,6 +51,11 @@
     background: url("../../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-position: center -108px;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../../img/bg-back-tablet@2x.jpg");
+      background-size: 1200px auto;
+    }
   }
 
   .page-photo__wrapper {
