--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -3,3 +3,5 @@
 @mobile-tablet-width-only: 1199px;
 @hover-link: rgba(210, 40, 86, 1);
 @active-link: rgba(210, 40, 86, 0.7);
+@retina-dpi: 144dpi;
+@retina-dppx: 1.5dppx;
