--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -32,6 +32,10 @@
     flex-direction: row;
   }
 
+  .page-footer__logo-desktop {
+    display: none;
+  }
+
   .page-footer__copyright {
     margin-top: 14px;
   }
@@ -50,5 +54,13 @@
     width: 940px;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .page-footer__logo-tablet {
+    display: none;
+  }
+
+  .page-footer__logo-desktop {
+    display: inline-block;
   }
 }
