--- a/source/less/blocks/photo-post.less
+++ b/source/less/blocks/photo-post.less
@@ -61,7 +61,7 @@
     position: absolute;
     left: 1px;
     top: 5px;
-    background: url("../../img/icon-heart.svg");
+    background: url("../img/icon-heart.svg");
     background-repeat: no-repeat;
   }
 }
