--- a/source/less/blocks/research.less
+++ b/source/less/blocks/research.less
@@ -18,6 +18,7 @@
     margin-right: auto;
     display: flex;
     justify-content: space-between;
+    
   }
 
   .research__text {
@@ -25,6 +26,36 @@
     flex-direction: column;
     width: 310px;
     margin-top: 7px;
+  }
+
+  .research__timer-general {
+    position: relative;
+  }
+
+  .research__img-timer {
+    width: 288px;
+    height: 275px;
+    position: absolute;
+    left: -23px;
+    fill: #dedede;
+  }
+
+  .research__img-diagram {
+    position: absolute;
+    top: 56px;
+    left: 20px;
+    width: 200px;
+    height: 200px;
+  }
+
+  .research__img-24 {
+    position: absolute;
+    top: -20px;
+    left: 64px;
+    font-size: 96px;
+    line-height: 150px;
+    font-weight: 700;
+    color: #d22856;
   }
 
   .research__title {
@@ -62,8 +93,26 @@
   }
 
   .research__img-timer {
-    width: 300px;
-    height: 343px;
+    width: 298px;
+    height: 345px;
+    position: absolute;
+    left: 0px;
+  }
+
+  .research__img-diagram {
+    position: absolute;
+    top: 70px;
+    left: 23px;
+    width: 253px;
+    height: 253px;
+  }
+
+  .research__img-24 {
+    position: absolute;
+    top: -24px;
+    left: 80px;
+    font-size: 120px;
+    line-height: 186px;
   }
 
   .research__text {
