--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -24,7 +24,7 @@
 .advantages__main-mobile {
   width: 100%;
   padding-top: 47px;
-  background: url("../../img/bg-triangle-white.svg");
+  background: url("../img/bg-triangle-white.svg");
   background-repeat: no-repeat;
   background-position: center -36px;
   background-color: #f2f2f2;
@@ -154,7 +154,7 @@
     display: block;
     width: 100%;
     padding-top: 0;
-    background: url("../../img/bg-triangle-white.svg");
+    background: url("../img/bg-triangle-white.svg");
     background-repeat: no-repeat;
     background-position: left 0;
     background-color: #f2f2f2;
