--- a/source/less/blocks/app-save.less
+++ b/source/less/blocks/app-save.less
@@ -2,12 +2,12 @@
   width: 100%;
   height: 670px;
   background-color: #2d3d4e;
-  background-image: url("../../img/iphone-hand-mobile@1x.png"), url("../../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat, no-repeat;
   background-position: left 112px, center -65px;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-    background-image: url("../../img/iphone-hand-mobile@2x.png"), url("../../img/bg-back-mobile@2x.jpg");
+    background-image: url("../img/iphone-hand-mobile@2x.png"), url("../img/bg-back-mobile@2x.jpg");
     background-size: 258px auto, 320px auto;
   }
 }
@@ -56,6 +56,20 @@
   justify-content: space-between;
 }
 
+.app-save__icon-apple {
+  margin-left: 5px;
+}
+
+.app-save__icon-android {
+  margin-top: 10px;
+    margin-right: 12px;
+}
+
+.app-save__icon-windows {
+  margin-top: 14px;
+  margin-right: 6px;
+}
+
 .app-save__description {
   font-weight: 300;
   color: #ffffff;
@@ -74,12 +88,12 @@
     width: 100%;
     height: 620px;
     background-color: #2d3d4e;
-    background-image: url("../../img/iphone-hand-tablet@1x.png"), url("../../img/bg-back-tablet@1x.jpg");
+    background-image: url("../img/iphone-hand-tablet@1x.png"), url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat, no-repeat;
     background-position: -20px 75px, center -108px;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("../../img/iphone-hand-tablet@2x.png"), url("../../img/bg-back-tablet@2x.jpg");
+      background-image: url("../img/iphone-hand-tablet@2x.png"), url("../img/bg-back-tablet@2x.jpg");
       background-size: 700px auto, 1200px auto;
     }
   }
