--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -6,7 +6,7 @@
   background-position: center -64px;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-    background-image: url("../../img/bg-back-mobile@2x.jpg");
+    background-image: url("../img/bg-back-mobile@2x.jpg");
     background-size: 320px auto;
   }
 }
@@ -35,12 +35,12 @@
 @media (min-width: @tablet-width) {
   .page-form__background {
     height: 332px;
-    background: url("../../img/bg-back-tablet@1x.jpg");
+    background: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-position: center -108px;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("../../img/bg-back-tablet@2x.jpg");
+      background-image: url("../img/bg-back-tablet@2x.jpg");
       background-size: 1200px auto;
     }
   }
