--- a/source/less/blocks/page-photo.less
+++ b/source/less/blocks/page-photo.less
@@ -5,13 +5,13 @@
 .page-photo__background {
   width: 100%;
   height: 173px;
-  background: url("../../img/bg-back-mobile@1x.jpg");
+  background: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center -64px;
   background-color: #2d3d4e;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-    background-image: url("../../img/bg-back-mobile@2x.jpg");
+    background-image: url("../img/bg-back-mobile@2x.jpg");
     background-size: 320px auto;
   }
 }
@@ -48,12 +48,12 @@
 @media (min-width: @tablet-width) {
   .page-photo__background {
     height: 332px;
-    background: url("../../img/bg-back-tablet@1x.jpg");
+    background: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-position: center -108px;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("../../img/bg-back-tablet@2x.jpg");
+      background-image: url("../img/bg-back-tablet@2x.jpg");
       background-size: 1200px auto;
     }
   }
