--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -23,7 +23,7 @@
 
 .advantages__main-mobile {
   width: 100%;
-  padding-top: 47px;
+  padding-top: 46px;
   background: url("../img/bg-triangle-white.svg");
   background-repeat: no-repeat;
   background-position: center -36px;
@@ -57,6 +57,9 @@
 }
 
 .advantages__description-mobile {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
   text-align: center;
   margin-top: 19px;
   margin-bottom: 0;
