--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -32,8 +32,8 @@
     flex-direction: row;
   }
 
-  .page-footer__logo-desktop {
-    display: none;
+  .page-footer__logo {
+    width: 146px;
   }
 
   .page-footer__copyright {
@@ -54,13 +54,5 @@
     width: 940px;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .page-footer__logo-tablet {
-    display: none;
-  }
-
-  .page-footer__logo-desktop {
-    display: inline-block;
   }
 }
