--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -21,5 +21,14 @@
     padding: 12px;
     border-radius: 50%;
     border: 3px solid rgba(40, 54, 69, 0.1);
+
+    &:hover {
+      border: 3px solid rgba(40, 54, 69, 1);
+    }
+
+    &:active {
+      fill: rgba(210, 40, 86, 0.3);
+      border: 3px solid rgba(40, 54, 69, 0.1);
+    }
   }
 }
