--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -14,6 +14,14 @@
 
   .copyright__link {
     fill: #d22856;
+
+    &:hover {
+      fill: rgba(40, 54, 69, 1);
+    }
+
+    &:active {
+      fill: rgba(40, 54, 69, 0.3);
+    }
   }
 }
 
