--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,9 +1,13 @@
+.page-form {
+  margin-top: -66px;
+}
+
 .page-form__background {
   width: 100%;
-  height: 173px;
+  height: 237px;
   background: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center -64px;
+  background-position: center 0px;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
@@ -29,15 +33,19 @@
   margin: 0;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 34px;
+  padding-top: 97px;
 }
 
 @media (min-width: @tablet-width) {
+  .page-form {
+    margin-top: -110px;
+  }
+
   .page-form__background {
-    height: 332px;
+    height: 439px;
     background: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
-    background-position: center -108px;
+    background-position: center 0px;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/bg-back-tablet@2x.jpg");
@@ -53,7 +61,7 @@
     width: 500px;
     font-size: 50px;
     line-height: 60px;
-    padding-top: 72px;
+    padding-top: 179px;
   }
 }
 
