--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -7,7 +7,7 @@
   height: 237px;
   background: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center 0px;
+  background-position: center 0;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
@@ -45,7 +45,7 @@
     height: 439px;
     background: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
-    background-position: center 0px;
+    background-position: center 0;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/bg-back-tablet@2x.jpg");
