--- a/source/less/blocks/app-save.less
+++ b/source/less/blocks/app-save.less
@@ -97,7 +97,7 @@
     background-color: #2d3d4e;
     background-image: url("../img/iphone-hand-tablet@1x.png"), url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat, no-repeat;
-    background-position: -20px 185px, center 0px;
+    background-position: -20px 185px, center 0;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/iphone-hand-tablet@2x.png"), url("../img/bg-back-tablet@2x.jpg");
