--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -32,7 +32,7 @@
     top: 12px;
     right: 0;
     width: 50px;
-    height: 3px;    
+    height: 3px;
     background-color: #ffffff;
     box-shadow: 0 10px 0 0 #ffffff, 0 20px 0 0 #ffffff;
   }
@@ -53,7 +53,7 @@
 }
 
 .main-nav--opened {
-  background-color: rgba(40, 54, 69, 1)
+  background-color: rgba(40, 54, 69, 1);
 }
 
 .main-nav--opened .main-nav__toggle {
