--- a/source/less/blocks/page-photo.less
+++ b/source/less/blocks/page-photo.less
@@ -7,7 +7,7 @@
   height: 238px;
   background: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center 0px;
+  background-position: center 0;
   background-color: #2d3d4e;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
@@ -46,15 +46,15 @@
 }
 
 @media (min-width: @tablet-width) {
-.page-photo {
-  margin-top: -110px;
-}
+  .page-photo {
+    margin-top: -110px;
+  }
 
   .page-photo__background {
     height: 439px;
     background: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
-    background-position: center 0px;
+    background-position: center 0;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/bg-back-tablet@2x.jpg");
