правка десктопного лого

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -160,6 +160,11 @@
     background: none;
   }
 
+  .main-nav__logo {
+    margin-left: -19px;
+    margin-top: -5px;
+  }
+
   .main-nav__wrapper-desktop {
     width: 100%;
     height: 1100px;
