--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,12 +2,16 @@
 @import "variables.less";
 @import "blocks/advantages.less";
 @import "blocks/app-save.less";
+@import "blocks/contacts.less";
 @import "blocks/copyright.less";
 @import "blocks/main-nav.less";
+@import "blocks/map.less";
 @import "blocks/page-footer.less";
 @import "blocks/page-form.less";
 @import "blocks/page-photo.less";
 @import "blocks/photo-post.less";
 @import "blocks/research.less";
+@import "blocks/reviews.less";
 @import "blocks/site-list.less";
 @import "blocks/social.less";
+@import "blocks/tariff.less";
