стилизация страницы фото

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -19,6 +19,11 @@
   margin-bottom: 32px;
 }
 
+.contacts__number-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .contacts__label {
   font-size: 18px;
   font-weight: 700;
@@ -32,6 +37,74 @@
   color: #d22856;
   text-align: center;
   margin-top: 6px;
+  line-height: 26px;
 }
 
+@media (min-width: @tablet-width) {
+  .contacts__wrapper {
+    max-width: 620px;
+  }
 
+  .contacts__questions {
+    font-size: 40px;
+    line-height: 48px;
+    width: 440px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 48px;
+  }
+
+  .contacts__number-wrapper {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .contacts__tel-wrapper {
+    margin-top: -7px;
+  }
+
+  .contacts__email-wrapper {
+    margin-top: -7px;
+  }
+
+  .contacts__adress-wrapper {
+    margin-top: 7px;
+    width: 280px;
+  }
+}
+
+@media (min-width:@desktop-width) {
+  .contacts__wrapper {
+    max-width: 1200px;
+  }
+
+  .contacts__questions {
+    font-size: 50px;
+    line-height: 60px;
+    width: 500px;
+    margin-top: 64px;
+  }
+
+  .contacts__number-wrapper {
+    padding-left: 125px;
+    padding-right: 98px;
+  }
+
+  .contacts__tel-wrapper {
+    margin-top: 5px;
+  }
+
+  .contacts__email-wrapper {
+    margin-top: 5px;
+    order: 1;
+  }
+
+  .contacts__adress-wrapper {
+    margin-top: 5px;
+  }
+
+  .contacts__label {
+    margin-bottom: 26px;
+  }
+}
