--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,4 +1,4 @@
-.page-footer-index {
+.page-footer-photo {
   display: none;
 }
 
@@ -16,7 +16,7 @@
     width: 100%;
     background-color: #ffffff;
     display: block;
-    padding-top: 20px;
+    padding-top: 34px;
   }
 
   .page-footer-index__wrapper {
@@ -46,7 +46,7 @@
     width: 100%;
     background-color: #ffffff;
     display: block;
-    padding-top: 60px;
+    padding-top: 68px;
     padding-bottom: 60px;
   }
 
