--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,6 +9,8 @@
 @import "blocks/page-footer.less";
 @import "blocks/page-form.less";
 @import "blocks/page-photo.less";
+@import "blocks/photo-call.less";
+@import "blocks/photo-editor.less";
 @import "blocks/photo-post.less";
 @import "blocks/research.less";
 @import "blocks/reviews.less";
